part2/2.02/manifests/todo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3000
